# LLM4Teach

./: .gitignore  Game.py  Readme.md  constant.py  main.py  mediator.py  planner.py  pyproject.toml  teacher_policy.py  windows_main.py
algos/: ppo.py
prompt/: task_info.json
skill_sc/: __init__.py  bace_skill.py
utils/: base_terran_agent.py  env.py
