[tool.poetry]
name = "llm4teach"
version = "0.1.0"
description = ""
authors = ["tasotaku_desktop <tasogareatakusann@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
torch = "^2.5.1"
gymnasium = "<1.0.0"
torch-ac = "^1.4.0"
opencv-python = "^4.10.0.84"
minigrid = "^2.3.1"
requests = "^2.32.3"
tensorboard = "^2.18.0"
pysc2 = "^4.0.0"
protobuf = "3.20.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
